Added main sections

--- a/20200705-tentacle-zone-playcanvas/index.html
+++ b/20200705-tentacle-zone-playcanvas/index.html
@@ -31,9 +31,10 @@
 					* Steven Yau ([@yaustar](https://twitter.com/yaustar))
 					* PlayCanvas Support Engineer at Snap Inc
 					* Past Experience
-						* King
-						* Playfish
-						* EA
+						* Consoles @EA
+						* Browsers @Playfish
+						* Mobile @King
+						* XR and Slots mixed in between 😬
 
 					Note:
 					Shhh, these are your private notes
@@ -65,6 +66,126 @@
 
 					<section data-background-iframe="https://rzr.polaris.com/en-us/rzr-rs1/build-color/?selectedmodel=1-seat" data-background-interactive>
 					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## And the rest
+						[https://github.com/playcanvas/awesome-playcanvas](https://github.com/playcanvas/awesome-playcanvas)
+						</textarea>
+					</section>
+				</section>
+
+				<section>
+					<!-- <h2>The head turning point for me</h2> -->
+					<iframe src="https://giphy.com/embed/VGQ1FHrvq24Ny" width="480" height="294" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gina-rodriguez-ginarodriguezedit-grodriguezedit-VGQ1FHrvq24Ny">via GIPHY</a></p>
+				</section>
+
+				<section>
+					<section data-markdown>
+						<textarea data-template>
+						## Current state of browser experiences
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## Game portals
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## Visualisation
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## Playable ads
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## Messenger platforms
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## KaiOS
+						</textarea>
+					</section>
+				</section>
+
+				<section>
+					<section data-markdown>
+						<textarea data-template>
+						## The future
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## iOS 14 with WebGL2 support
+						</textarea>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## WASM
+						* More languages can be used
+							* Rust
+							* C and C++
+							* Haxe
+							* _etc_
+						</textarea>
+					</section>
+
+					<section data-background-iframe="https://d07riv.github.io/diabloweb/" data-background-interactive>
+					</section>
+
+					<section data-markdown>
+						<textarea data-template>
+						## WebXR
+						</textarea>
+					</section>
+
+					<section data-background-iframe="https://www.youtube.com/embed/kpsLKob5Ju8" data-background-interactive>
+					</section>
+
+					<section data-background-iframe="https://www.youtube.com/embed/H5KoguDR5No?start=15" data-background-interactive>
+					</section>
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					## What to consider when making browser games
+					</textarea>
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					## PlayCanvas Demo
+					</textarea>
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					## Upcoming features for PlayCanvas
+					</textarea>
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					## Other frameworks to consider
+					</textarea>
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					## Questions
+					</textarea>
 				</section>
 			</div>
 		</div>
