Added game portal images

--- a/20200705-tentacle-zone-playcanvas/index.html
+++ b/20200705-tentacle-zone-playcanvas/index.html
@@ -121,7 +121,7 @@
 				<section>
 					<section data-markdown>
 						<textarea data-template>
-						## The future
+						## What's coming next
 						</textarea>
 					</section>
 
