Updated speaker notes for the demo.

--- a/20200705-tentacle-zone-playcanvas/index.html
+++ b/20200705-tentacle-zone-playcanvas/index.html
@@ -357,8 +357,13 @@
 					Open up Keepy Up as it’s small enough to digest quickly and covers some major feature sets.
 					Quick run through the Editor.
 					Fork.
+					Branch.
+					Look at the ball material.
 					Change the logo.
+					Change the position of the score to the top right.
 					Make the ball easier to hit by exposing the tap radius and tweaking it live to get it to ‘feel’ right.
+					Optimise network load.
+					Commit. Merge.
 					Publish and share URL link.
 					Show package size
 					</textarea>
