Updated speaker notes for the demo.

--- a/20200705-tentacle-zone-playcanvas/index.html
+++ b/20200705-tentacle-zone-playcanvas/index.html
@@ -362,6 +362,7 @@
 					Change the logo.
 					Change the position of the score to the top right.
 					Make the ball easier to hit by exposing the tap radius and tweaking it live to get it to ‘feel’ right.
+					Update the particle effect.
 					Optimise network load.
 					Commit. Merge.
 					Publish and share URL link.
