--- a/20200705-tentacle-zone-playcanvas/index.html
+++ b/20200705-tentacle-zone-playcanvas/index.html
@@ -377,7 +377,7 @@
 					* Basis texture support
 					* Animations state graph controller
 					* JSON attributes
-					* Shader node edtior
+					* Shader node editor
 					* User editor extension support
 					</textarea>
 				</section>
