Updated to work in an iframe and on iOS 12 + 14

--- a/ios14test/index.html
+++ b/ios14test/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="manifest.json">
     <style></style>
     <title>iOS CSS changes</title>
-    <script src="playcanvas-stable.min.js"></script>
+    <script src="playcanvas-stable.dbg.js"></script>
     <script src="__settings__.js"></script>
 </head>
 <body>
