--- a/twitterwebgltest/index.html
+++ b/twitterwebgltest/index.html
@@ -8,6 +8,7 @@
     <meta name="twitter:player" content="https://yaustar.github.io/twitterwebgltest/index.html" />
     <meta name="twitter:player:width" content="480" />
     <meta name="twitter:player:height" content="480" />
+    <meta name="twitter:image:src" content="https://yaustar.github.io/twitterwebgltest/preview.jpg" />
     <meta property="og:image" content="https://yaustar.github.io/twitterwebgltest/preview.jpg" />
     <meta property="og:title" content="PlayCanvas Stencil Buffer - 3D Magic Card" />
     <meta property="og:description" content="Example @playcanvas project that uses the stencil buffer to create a magic window like effect on a card"/>
