--- a/twitterwebgltest/index.html
+++ b/twitterwebgltest/index.html
@@ -9,9 +9,8 @@
     <meta name="twitter:player:width" content="480" />
     <meta name="twitter:player:height" content="480" />
     <meta name="twitter:image" content="https://yaustar.github.io/twitterwebgltest/preview-small.jpg" />
-    <meta property="og:image" content="https://yaustar.github.io/twitterwebgltest/preview.jpg" />
-    <meta property="og:title" content="PlayCanvas Stencil Buffer - 3D Magic Card" />
-    <meta property="og:description" content="Example @playcanvas project that uses the stencil buffer to create a magic window like effect on a card"/>
+    <meta name="twitter:title" content="PlayCanvas Stencil Buffer - 3D Magic Card" />
+    <meta name="twitter:description" content="Example @playcanvas project that uses the stencil buffer to create a magic window like effect on a card"/>
 
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="manifest" href="manifest.json">
