--- a/linein-h5/index.html
+++ b/linein-h5/index.html
@@ -19,7 +19,7 @@
 
     <base target="_blank">
 
-    <title>Select audio and video sources</title>
+    <title>Select audio and video sources test</title>
 
     <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="main.css">
