--- a/test.html
+++ b/test.html
@@ -26,6 +26,8 @@
     <p>
       <a href="https://stevenyau.co.uk" target="_parent">Parent target</a>
     </p>
-	<script src="index.js"></script>
+    <p>
+      <a href="https://stevenyau.co.uk">No target</a>
+    </p>
   </body>
 </html>
